--- a/config
+++ b/config
@@ -1,12 +1,14 @@
 {
 	["advancedgui"]={
 		["path"]="advancedgui",
-		["version"]=2,},
+		["version"]=2,
+	},
 	["advancedtunnel"]={
 		["path"]="advancedtunnel",
-		["version"]=3,},
+		["version"]=3,
+	},
 	["advancedorefinder"]={
 		["path"]="advancedorefinder",
-		["version"]=6,},
-	}
+		["version"]=6,
+	},
 }
